--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-angular",
+  "name": "ecommerce-clients",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:test-angular": "node dist/test-angular/server/server.mjs"
+    "serve:ssr:ecommerce-clients": "node dist/ecommerce-clients/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -18,6 +18,7 @@
     "@angular/core": "^17.2.0",
     "@angular/forms": "^17.2.0",
     "@angular/material": "^17.3.4",
+    "@angular/material-moment-adapter": "^18.0.3",
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/platform-server": "^17.2.0",
